BACKUP/recipies/media-wiki-with-traefik/wiki-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  #name and label for deployment
  name: wikiserver
  labels:
    app: wikiserver
spec:
  replicas: 1
  selector:
    matchLabels:
      # re-use deployment label
      app: wikiserver
  template:
    metadata:
      labels:
        #re-use deployment label
        app: wikiserver
    spec:
      containers:
        #re-use deployment label
        - name: wikiserver
          # name of image to use 
          image: mediawiki
          ports:
            #name of port will be re-used in service and ingress 
            - name: wiki
              containerPort: 80
