BACKUP/recipies/media-wiki-with-traefik/wiki-services.yaml
apiVersion: v1
kind: Service
metadata:
  #re-use deployment label here
  name: wikiserver

spec:
  type: LoadBalancer
  ports:
    #name of port from deployment
    - name: wiki-port
      port: 8087
      #name of port in ingress
      #targetPort: wiki
      targetPort: 80
  selector:
    #re-use deployment label here
    app: wikiserver
