BACKUP/recipies/media-wiki-with-traefik/wiki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikiserver-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            #name of deployment used here
            name: wikiserver
            port:
              #name of port declared in service
              name: wiki
